gcc/testsuite/gm2/iso/const/fail/testcap2.mod
MODULE testcap2 ;

CONST
   foo = CAP (ch + '8' - '1') ;

VAR
   ch: CHAR ;
BEGIN

END testcap2.
